--- a/templates/attendance/devotee_list.html
+++ b/templates/attendance/devotee_list.html
@@ -185,10 +185,10 @@
     <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
             <li class="page-item">
-                <a class="page-link" href="?page=1{% if search_query %}&search={{ search_query }}{% endif %}">&laquo; First</a>
+                <a class="page-link" href="?page=1{% if search_query %}&search={{ search_query }}&search_type={{ request.GET.search_type }}{% endif %}">&laquo; First</a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Previous</a>
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if search_query %}&search={{ search_query }}&search_type={{ request.GET.search_type }}{% endif %}">Previous</a>
             </li>
         {% endif %}
         
@@ -198,10 +198,10 @@
         
         {% if page_obj.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Next</a>
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if search_query %}&search={{ search_query }}&search_type={{ request.GET.search_type }}{% endif %}">Next</a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% if search_query %}&search={{ search_query }}{% endif %}">Last &raquo;</a>
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% if search_query %}&search={{ search_query }}&search_type={{ request.GET.search_type }}{% endif %}">Last &raquo;</a>
             </li>
         {% endif %}
     </ul>
@@ -358,10 +358,12 @@ function updatePagination(data) {
 
 function loadPage(page) {
     const searchQuery = document.getElementById('searchInput').value;
+    const searchType = document.getElementById('searchType').value;
     const url = new URL(window.location);
     url.searchParams.set('page', page);
     if (searchQuery) {
         url.searchParams.set('search', searchQuery);
+        url.searchParams.set('search_type', searchType);
     }
     
     fetch(url, {
